tests/dataset/tpc-ds/compiler/go/q62.error
go run error: exit status 1
# command-line-arguments
/tmp/TestGoCompiler_TPCDSq621949104317/001/main.go:67:2: syntax error: unexpected name sult after top level declaration
